# labello

./: .gitignore  README.md  env.sh  generate_labels_resistor.py  labels.db  labels_basic.txt  labels_caps.txt  labels_m3.txt  labels_resistors.txt  pyproject.toml  szufladki.py
helpers/: db_create.py  generate_labels_resistor.py  labello.service
labello/: __main__.py  api.py  database.py  epl_qrcode.py  label_templating.py  printer.py  settings.py  web.py
labello/rendering/: epl.py  zpl.py
labello/templates/: editor.html  label_gallery.html
labello/templates/partials/: label_render.html
labello/templating/: epl.py  loader.py
labello/web/templates/: base.html  editor.html  label_gallery.html  print.html  send_raw.html
