[tool.poetry]
name = "label-maker"
version = "0.1.0"
description = ""
authors = ["Norbert Szulc <norbert@not7cd.net>"]

[tool.poetry.dependencies]
python = "^3.6"
pycups = "^2.0.1"
flask = "^1.1.2"
peewee = "^3.14.1"
qrcode = "^6.1"
Pillow = "^8.1.1"
gunicorn = "^20.0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
